feat: Implement complete AI Fitness Trainer with Gemini API and MongoDB
Major Features:
- User authentication with JWT and bcrypt
- AI chatbot using Google Gemini (gemini-1.5-flash)
- Persistent chat history in MongoDB
- Real-time AI responses with fitness context
- Profile management with fitness goals and preferences

Backend Implementation:
- Express.js server with modular architecture
- MongoDB schemas: User, ChatMessage, Workout, Exercise, Schedule
- Gemini AI service integration with context-aware responses
- JWT authentication middleware for protected routes
- Nodemon integration for automatic server restart

Frontend Implementation:
- React 19 with React Router v6 for navigation
- Login/Signup authentication flow with tabs
- Real-time chat interface with typing indicators
- Axios with request/response interceptors
- Responsive UI with gradient themes and animations

Tech Stack:
- Backend: Node.js, Express, MongoDB, Mongoose, Gemini AI
- Frontend: React, Vite, Axios, React Router
- Security: JWT, bcrypt, CORS, dotenv

Documentation:
- Comprehensive PROJECT_GUIDE.md with setup instructions
- API endpoint documentation with examples
- Database schema reference
- Troubleshooting guide and common issues
- Environment variable configuration guide

--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,13 @@
 
 MONGODB_URI=mongodb+srv://vmmanish502_db_user:mQfcLY1ZJK5nd1dn@refugee-ai-cluster.ibnuipt.mongodb.net/AI_Fitness_ChatBot_DB?retryWrites=true&w=majority
 
-PORT = 5000
+PORT=5000
+
+# JWT Secret for authentication (Change this to a random secure string)
+JWT_SECRET=fitness-chatbot-super-secret-key-2025-xyz789abc456def!@#
+
+# Gemini API Key (Get from: https://makersuite.google.com/app/apikey)
+GEMINI_API_KEY=AIzaSyCsZTK55OjgreYoEeNqzc1EUe0WQCsWlJM
+
+# Frontend URL for CORS
+FRONTEND_URL=http://localhost:5173
